added basic CSS

--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -12,11 +12,13 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
         
         <!-- Script and Stylesheet -->
-        <link rel="stylesheet" href="styles/media-query-large.css">
         <link rel="stylesheet" href="styles/media-query.css">
+        <link rel="stylesheet" href="styles/media-query-large.css">
     </head>
-    <body lang="en-US">
+    <body>
+        <header>
         <h1>Media Query Example</h1>
+        </header>
         <main>
             <section>
                 <h2>Esther 8:9</h2>
@@ -26,9 +28,9 @@
                 <h2>Revelation 20:4</h2>
                 <p>And I saw thrones, and they sat upon them, and judgment was given unto them: and I saw the souls of them that were beheaded for the witness of Jesus, and for the word of God, and which had not worshipped the beast, neither his image, neither had received his mark upon their foreheads, or in their hands; and they lived and reigned with Christ a thousand years.</p>
             </section>
-            <footer>
-                <p>J Austin Hutchinson</p>
-            </footer>
         </main>
+        <footer>
+            <p>J Austin Hutchinson</p>
+        </footer>
     </body>
 </html>
