--- a/week02/bom.html
+++ b/week02/bom.html
@@ -12,8 +12,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
         
         <!-- Script and Stylesheet -->
-        <link rel="stylesheet" href="styles/media-query.css">
-        <link rel="stylesheet" href="styles/media-query-large.css">
+        <link rel="stylesheet" href="styles/bom.css">
+        <script src="scripts/bom.js" defer></script>    
     </head>
     <body>
         <h1>📖 Book of Mormon - Top 10</h1>
