Adjusted colors for better contrast. Added alt to images. Fixed missing /

--- a/temples.html
+++ b/temples.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="media query" content="Austin Hutchinson WDD 131 - Dynamic Web Fundamentals Week02 Assignment1 Activity1 School Assignment">
     <meta name="author" content="John Austin Hutchinson">
+    <meta name="description" content="Austin Hutchinson WDD 131 - Dynamic Web Fundamentals Temple School Assignment Course Hamburger Menu">
     <title>WDD131 - Media Query Example</title>   
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +18,7 @@
 </head>
 <body>
     <header>
-        <p>Temple Album<p>
+        <p>Temple Album</p>
         <div id="menu" class=""></div>
         <nav>
             <a href="" target="_blank">Home</a>
@@ -31,39 +32,39 @@
         <h1>Home</h1>
 <!-- https://www.churchofjesuschrist.org/media/collection/temples-images?lang=eng -->
         <figure>
-            <img src="images/temple-bountiful.webp">
+            <img src="images/temple-bountiful.webp" alt="temple" >
             <figcaption>Temple</figcaption>
         </figure>
         <figure>
-            <img src="images/temple-bountiful.webp">
+            <img src="images/temple-bountiful.webp" alt="temple">
             <figcaption>Temple</figcaption>
         </figure>
         <figure>
-            <img src="images/temple-bountiful.webp">
+            <img src="images/temple-bountiful.webp" alt="temple" >
             <figcaption>Temple</figcaption>
         </figure>
         <figure>
-            <img src="images/temple-bountiful.webp">
+            <img src="images/temple-bountiful.webp" alt="temple" >
             <figcaption>Temple</figcaption>
         </figure>
         <figure>
-            <img src="images/temple-bountiful.webp">
+            <img src="images/temple-bountiful.webp" alt="temple" >
             <figcaption>Temple</figcaption>
         </figure>
         <figure>
-            <img src="images/temple-bountiful.webp">
+            <img src="images/temple-bountiful.webp" alt="temple" >
             <figcaption>Temple</figcaption>
         </figure>
         <figure>
-            <img src="images/temple-bountiful.webp">
+            <img src="images/temple-bountiful.webp" alt="temple" >
             <figcaption>Temple</figcaption>
         </figure>
         <figure>
-            <img src="images/temple-bountiful.webp">
+            <img src="images/temple-bountiful.webp" alt="temple" >
             <figcaption>Temple</figcaption>
         </figure>
         <figure>
-            <img src="images/temple-bountiful.webp">
+            <img src="images/temple-bountiful.webp" alt="temple">
             <figcaption>Temple</figcaption>
         </figure>
     </main>
