added h2 Corrected page h1 content

--- a/temples.html
+++ b/temples.html
@@ -6,7 +6,7 @@
     <meta name="media query" content="Austin Hutchinson WDD 131 - Dynamic Web Fundamentals Week02 Assignment1 Activity1 School Assignment">
     <meta name="author" content="John Austin Hutchinson">
     <meta name="description" content="Austin Hutchinson WDD 131 - Dynamic Web Fundamentals Temple School Assignment Course Hamburger Menu">
-    <title>WDD131 - Media Query Example</title>   
+    <title>WDD131 - Temple</title>   
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -29,7 +29,8 @@
         </nav>
     </header>
     <main>
-        <h1>Home</h1>
+        <h1>Temple</h1>
+        <h2>Photos</h2>
 <!-- https://www.churchofjesuschrist.org/media/collection/temples-images?lang=eng -->
         <figure>
             <img src="images/temple-bountiful.webp" alt="temple" >
