added place images. added base content and css

--- a/place.html
+++ b/place.html
@@ -8,27 +8,79 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/place.css"> 
-    <script src="styles/place.css" Defer> </script>
+    <script src="scripts/place.js" Defer> </script>
 </head>
 <body>
     <header>
-        <h1>Place</h1>
+        <h1>Wales</h1>
     </header>
     <main>
         <section class="hero-image">
             <picture>
-                <source srcset="">
-                <source srcset="">
-                <img src="" alt="">
+                <source srcset="images/welsh-castle-1080.webp" media="(min-width:720px)">
+                <img src="images/welsh-castle-480.webp" alt="Welsh Castle" width="360" height="180">
             </picture>
         </section>
         <section class="info-card">
-            <div>
-                <h2>Weather</h2>
-            </div> 
+            <h2>Data</h2>
+            <table>
+                <tbody>
+                    <tr>
+                        <th>Area: </th>
+                        <td>21,218 km^2</td>
+                    </tr>
+                    <tr>
+                        <th>Population: </th>
+                        <td>3,107,494</td>
+                    </tr>
+                    <tr>
+                        <th>Capital: </th>
+                        <td>Cardiff</td>
+                    </tr>
+                    <tr>
+                        <th>Languages: </th>
+                        <td>English, Welsh</td>
+                    </tr>
+                    <tr>
+                        <th>Currency: </th>
+                        <td>Pound Sterling</td>
+                    </tr>
+                    <tr>
+                        <th>Timezone: </th>
+                        <td>UTC+0</td>
+                    </tr>
+                    <tr>
+                        <th>Calling Code: </th>
+                        <td>+44</td>
+                    </tr>
+                    <tr>
+                        <th>Internet TLD: </th>
+                        <td>.wales .cymru</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
         <section class="info-card">
-
+            <h2>Weather</h2>
+            <table>
+                <tbody>
+                    <tr>
+                        <th>Temperature: </th>                            <td>Value</td>
+                    </tr>
+                    <tr>
+                        <th>Conditions: </th>
+                        <td>Value</td>
+                    </tr>
+                    <tr>
+                        <th>Wind: </th>
+                        <td>Value</td>
+                    </tr>
+                    <tr>
+                        <th>Wind Chill: </th>
+                        <td>Value</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
     </main>
     <footer>
