updated dta card placement at large screen sizes

--- a/place.html
+++ b/place.html
@@ -62,6 +62,7 @@
         </section>
         <section class="info-card">
             <h2>Weather</h2>
+            <img src="images/weather-icon.svg" alt="Partly Cloudy" id="weather-symbol">
             <table>
                 <tbody>
                     <tr>
