added css for img.

--- a/place.html
+++ b/place.html
@@ -61,7 +61,7 @@
             </table>
         </section>
         <section class="info-card">
-            <h2>Weather</h2>
+            <h2 id="weather-title">Weather</h2>
             <img src="images/weather-icon.svg" alt="Partly Cloudy" id="weather-symbol">
             <table>
                 <tbody>
