added JS for Weather Values

--- a/place.html
+++ b/place.html
@@ -66,19 +66,19 @@
             <table>
                 <tbody>
                     <tr>
-                        <th>Temperature: </th>                            <td>Value</td>
+                        <th>Temperature: </th>                            <td id="temp-value">Value</td>
                     </tr>
                     <tr>
                         <th>Conditions: </th>
-                        <td>Value</td>
+                        <td id="conditions-value">Value</td>
                     </tr>
                     <tr>
                         <th>Wind: </th>
-                        <td>Value</td>
+                        <td id="wind-value">Value</td>
                     </tr>
                     <tr>
                         <th>Wind Chill: </th>
-                        <td>Value</td>
+                        <td id="windchill-value">Value</td>
                     </tr>
                 </tbody>
             </table>
