--- a/place.html
+++ b/place.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="John Austin Hutchinson">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Austin Hutchinson WDD131 Week3 Place">
-    <title>Place</title>
+    <title>Wales Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/place.css"> 
-    <script src="scripts/place.js" Defer> </script>
+    <script src="scripts/place.js" defer> </script>
 </head>
 <body>
     <header>
