updated images and some meta-data

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="media query" content="Austin Hutchinson WDD 131 - Dynamic Web Fundamentals Week02 Assignment1 Activity1 School Assignment">
     <meta name="author" content="John Austin Hutchinson">
-    <meta name="description" content="Austin Hutchinson WDD 131 - Dynamic Web Fundamentals Temple School Assignment Course Hamburger Menu">
+    <meta name="description" content="Austin Hutchinson WDD 131 - Dynamic Web Fundamentals Temple School Assignment Course Filtered">
     <title>WDD131 - Temple</title>   
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
