--- a/week05/index.html
+++ b/week05/index.html
@@ -48,9 +48,9 @@
             <fieldset>
                 <legend>Applicant Information</legend>
                 <label>First Name*<input type="text" name="fname" required> </label>
-                <label>Last Name*<input type="last" name="lname" required> </label>
+                <label>Last Name*<input type="text" name="lname" required> </label>
                 <label>Phone<input type="tel" name="phone" placeholder="1234567890"> </label>
-                <label>Email*<input type="tel" name="phone" placeholder="someone@gmail.com" required> </label>
+                <label>Email*<input type="email" name="phone" placeholder="someone@gmail.com" required> </label>
                 <label>Website*<input type="url" name="url" placeholder="http://" required> </label>
             </fieldset>
             <fieldset>
