added css for the form activity

--- a/week05/index.html
+++ b/week05/index.html
@@ -71,7 +71,7 @@
                 <label>
                     Course Subject
                     <select name="subject">
-                        <option value="">Please Select</option>
+                        <option value="">Please Select &#9662;</option>
                         <option value="0">0</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
