fixed css issue added images

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -42,14 +42,14 @@
                 </li>
                 <li>Typography: Open Sans, as all purpose Font</li>
             </ul>
-            <h2>Logo:</h2>
-            <img href="sitelogo.svg" alt="Logo - Gaius Invictus">
+            <h2>Logo: <a href="https://commons.wikimedia.org/wiki/File:Dwarf_Fortress_Icon.svg">Origin</a> </h2>
+            <img src="images/sitelogo.svg" alt="Logo - Gaius Invictus">
         </section>
         <section>
             <h2>Wireframes</h2>
-            <img href="wireframe-mobile.webp" alt="Wireframe for Mobile">
+            <img src="images/wireframe-mobile.webp" alt="Wireframe for Mobile">
             <br>
-            <img href="wireframe-desktop.webp" alt="Wireframe for Desktop">
+            <img src="images/wireframe-desktop.webp" alt="Wireframe for Desktop">
         </section>
 
     </main>
