--- a/review.html
+++ b/review.html
@@ -11,8 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/form.css">
-    <script src="js/form_results.js" defer> </script>
+    <link rel="stylesheet" href="styles/form.css">
+    <script src="scripts/form.js" defer> </script>
+    <script src="scripts/form_results.js" defer> </script>
 </head>
 
 <body>
