removed invalid divs

--- a/form.html
+++ b/form.html
@@ -36,15 +36,15 @@
             </div>
             <div class="form_section radio-list">
                 <span class="form_title">Overall Rating</span>
-                <label><div>&star;</div>
+                <label>&star;
                     <input type="radio" name="form_rating" id="form_1_star" value="1" required></label>
-                <label><div>&star;&star;</div>
+                <label>&star;&star;
                     <input type="radio" name="form_rating" id="form_2_star" value="2" required></label>
-                <label><div>&star;&star;&star;</div>
+                <label>&star;&star;&star;
                     <input type="radio" name="form_rating" id="form_3_star" value="3" required></label>
-                <label><div>&star;&star;&star;&star;</div>
+                <label>&star;&star;&star;&star;
                     <input type="radio" name="form_rating" id="form_4_star" value="4" required></label>
-                <label><div>&star;&star;&star;&star;&star;</div>
+                <label>&star;&star;&star;&star;&star;
                     <input type="radio" name="form_rating" id="form_5_star" value="5" required></label>
             </div>
             <div class="form_section">
@@ -53,13 +53,13 @@
             </div>
             <div class="form_section radio-list">
                 <span class="form_title">What features of the product did you find useful?</span>
-                <label><div>Durability</div>
+                <label>Durability
                     <input type="checkbox" name="form_durability" id="form_durability"
                         value="durability"></label>
-                <label><div>Ease of Use</div><input type="checkbox" name="form_ease" id="form_ease" value="ease"></label>
-                <label><div>Performance</div><input type="checkbox" name="form_performance" id="form_performance" value="performance"></label>
-                <label><div>Design</div><input type="checkbox" name="form_design" id="form_design" value="design"></label>
-                <label><div>Value for Money</div><input type="checkbox" name="form_value" id="form_value" value="value"></label>
+                <label>Ease of Use<input type="checkbox" name="form_ease" id="form_ease" value="ease"></label>
+                <label>Performance<input type="checkbox" name="form_performance" id="form_performance" value="performance"></label>
+                <label>Design<input type="checkbox" name="form_design" id="form_design" value="design"></label>
+                <label>Value for Money<input type="checkbox" name="form_value" id="form_value" value="value"></label>
             </div>
             <div class="form_section">
                 <label><span class="form_title">Written Review</span>
