--- a/project/index.html
+++ b/project/index.html
@@ -33,7 +33,7 @@
     </header>
     <main>
         <section class="planet-card">
-            <img src="images/planet.png" class="planet" loading="lazy">
+            <img src="images/planet-vitebsk.webp" class="planet" loading="lazy" alt="The Planet Vitebsk">
             <h2>The Pitch</h2>
             <p>
                 Humanity and the systems it creates didn't change when they left home. We still have violence,
@@ -72,7 +72,7 @@
             </p>
         </section>
         <section class="planet-card">
-            <img src="images/planet.png" class="planet" loading="lazy">
+            <img src="images/planet-zarahemla.webp" class="planet" loading="lazy" alt="The Planet Zarahemla">
             <h2>Player Aids</h2>
             <ul>
                 <li><a href="charactergen.html">Generate the Fiction of your Character</a></li>
@@ -107,19 +107,18 @@
             </ul>
         </section>
         <section class="planet-card">
-            <img src="images/planet.png" class="planet" loading="lazy">
+            <img src="images/planet-chuluu.webp" class="planet" loading="lazy" alt="The Chuluu Belt">
             <h2>Inspirations</h2>
             <p><a href="https://www.drivethrurpg.com/en/product/230009/stars-without-number-revised-edition-free-version"
                     target="_blank">Stars Without Number</a> - Kevin Crawford: This is my root system. My original
-                sector was designed to
-                be compatible with SWN's lore with only a few tweaks. It and its expansions are the best generic sci-fi
+                sector was designed to be compatible with SWN's lore with only a few tweaks. It and its expansions are the best generic sci-fi
                 toolkit I've found. I pull from them liberally.</p>
             <p><a href="https://www.youtube.com/watch?v=iNjobkmzaOY" target="_blank">The Expanse</a> - James S.A. Corey:
                 I love this series. Both the Books and the TV show are exceptionally good sci-fi. From it, I pull human
                 conflict as the central driver, really "alien" aliens, and a focus on single stellar systems rather than
                 something interstellar like Star Wars.</p>
             <p><a href="http://www.projectrho.com/public_html/rocket/" target="_blank">Atomic Rockets</a> - Wintchell
-                Chung: This site is an excellent Veracity to Physics.</p>
+                Chung: This site is an excellent source for science accuracy for science fiction. I attempt to keep the science semi-realistic in my games.</p>
             <p><a href="https://www.tuesdayknightgames.com/pages/mothership-rpg" target="_blank">Mothership</a> - Sean
                 McCoy: It is grungy, it is dark, is it industrial, it is lethal. Survive, Solve or Save - pick 2.</p>
             <p><a href="https://www.youtube.com/watch?v=EL-D9LrFJd4" target="">Cowboy Bebop</a> - Shinichiro Watanabe,
