--- a/project/vitebsk.html
+++ b/project/vitebsk.html
@@ -33,7 +33,7 @@
     </header>
     <main>
         <section class="planet-card">
-            <img src="images/planet.png" class="planet" loading="lazy">
+            <img src="images/planet.png" class="planet" loading="lazy" alt="The alchemical symbol for Sun">
             <h2>World Profile Key</h2>
             <h3>###-###</h3>
             <h4>Diameter, Atmosphere, Hydrographics - Population Range, Tech level, Port Class</h4>
@@ -73,8 +73,8 @@
             </ul>
         </section>
         <section class="planet-card" id="planet-vitebsk">
-            <img src="images/planet.png" class="planet" loading="lazy">
             <h2>Vitebsk Prime</h2>
+            <img src="images/planet-vitebsk.webp" class="planet" alt="The Planet Vitebsk" loading="lazy">
             <h3>674-83B</h3>
             <h4>Key Details</h4>
             <ul>
@@ -91,8 +91,8 @@
             </ul>
         </section>
         <section class="planet-card" id="planet-ivanovo">
-            <img src="images/planet.png" class="planet" loading="lazy">
             <h2>Ivanovo</h2>
+            <img src="images/planet-ivanovo.webp" class="planet" loading="lazy" alt="The Planet Ivanovo">
             <h3>740-0X0</h3>
             <h4>Key Details</h4>
             <ul>
@@ -101,13 +101,13 @@
             </ul>
             <h4>Orbiting Bodies</h4>
             <ul>
-                <li>Krovengrad - The second most heavily populated body in the system</li>
+                <li>Krovengrad - The second most heavily populated body in the system with tens of millions of citizens.</li>
                 <li>Smolensk</li>
             </ul>
         </section>
         <section class="planet-card" id="planet-chuluu">
-            <img src="images/planet.png" class="planet" loading="lazy">
             <h2>The Chuluu Belts</h2>
+            <img src="images/planet-chuluu.webp" class="planet" loading="lazy" alt="The Chuluu Belt">
             <h3>000-2X1,000-6XF</h3>
             <h4>Key Details</h4>
             <ul>
@@ -116,8 +116,8 @@
             </ul>
         </section>
         <section class="planet-card" id="planet-sur">
-            <img src="images/planet.png" class="planet" loading="lazy">
             <h2>Sur</h2>
+            <img src="images/planet-sur.webp" class="planet" loading="lazy" alt="The PLanet Sur">
             <h3>423-2XF</h3>
             <h4>Key Details</h4>
             <ul>
@@ -130,8 +130,8 @@
             </ul>
         </section>
         <section class="planet-card" id="planet-salalah">
-            <img src="images/planet.png" class="planet" loading="lazy">
             <h2>Salalah</h2>
+            <img src="images/planet-salalah.webp" class="planet" loading="lazy" alt="The Planet Salalah">
             <h3>964-000</h3>
             <h4>Key Details</h4>
             <ul>
@@ -139,8 +139,8 @@
             </ul>
         </section>
         <section class="planet-card" id="planet-zarahemla">
-            <img src="images/planet.png" class="planet" loading="lazy">
             <h2>Zarahemla</h2>
+            <img src="images/planet-zarahemla.webp" class="planet" loading="lazy" alt="The Gas Giant Zarahemla">
             <h3>Size 26</h3>
             <h4>Key Details</h4>
             <ul>
